--- a/menu.html
+++ b/menu.html
@@ -7,14 +7,18 @@
     <link rel="stylesheet" href="css/css.css">
 </head>
 <body>
-    <header>
+     <header>
         <img class="logo" src="img/logo.png" alt="Logo do Restaurante BONA Sushi e Grill">
-    </header>
         <nav>
-            || <a href="index.html">Home</a> ||
-            <a href="sobre.html">Sobre nós</a> ||
+            <ul>
+             || <a href="index.html">Home</a> ||
+                <a href="sobre.html">Sobre Nós</a> ||
+                <a href="menu.html">Menu</a> ||
+            </ul>     
         </nav>
-    
+    </header>
+        <img class="salao" src="img/salão.png" alt="Foto do Salão do Restaurante">
+        <div class="combinados">
         <h1 class="inicio">🥢 Combinados </h1>
         
         <p>Combinado Clássico (20 peças) – R$ 59,90
@@ -25,41 +29,66 @@
 
         <p>Combinado Premium (60 peças) – R$ 159,90
             (Inclui sushis especiais, sashimis, niguiris e rolls especiais)</p>
-        </p>
-
+        <p>Combinado Vegetariano (20 peças) – R$ 49,90
+            (Sushis e rolls com legumes frescos e tofu)</p>    
+        <p>Combinado Família (80 peças) – R$ 199,90
+            (Ideal para compartilhar, com uma seleção variada para todos os gostos)</p>    
+        </div>
+        <div id="meio">
+            <img class="meio" src="img/logo.png" alt="Logo do Restaurante BONA Sushi e Grill">
+        </div>
+        <div class="entradas">
         <h1 class="inicio">🍤 Entradas</h1>
         <p>Shimeji na manteiga – R$ 34,90</p>
         <p>Tempurá de camarão (6 unid.) – R$ 42,90</p>
         <p>Guioza (6 unid.) – R$ 29,90</p>
-
+        <p>Sunomono (salada de pepino com kani) – R$ 19,90</p>
+        </div>
+        <div class="pratos">
         <h1 class="inicio">🍣 Sushis e Sashimis</h1>
         <p>Sushi de salmão (2 unid.) – R$ 12,90</p>
         <p>Sushi de atum (2 unid.) – R$ 14,90</p>
         <p>Niguiri de Salmão (2 unid.) – R$ 14,90</p>
         <p>Niguiri de Atum (2 unid.) – R$ 15,90</p>
+        </div>
 
+        <div class="rolls">
         <h1 class="inicio">🍱 Rolls Especiais</h1>
         <p>Filadelfia Roll (8 unid.) – R$ 39,90</p>
         <p>Dragon Roll (8 unid.) – R$ 44,90</p>
         <p>Hot Roll (8 unid.) – R$ 36,90</p>
+        <p>California Roll (8 unid.) – R$ 32,90</p>
+        </div>
 
+        <div class="pratosquentes">     
         <h1 class="inicio">🍜 Pratos Quentes</h1>   
         <p>Yakissoba de Frango – R$ 29,90</p>
         <p>Yakissoba de Camarão – R$ 34,90</p>
         <p>Lámen tradicional – R$ 49,90</p>
+        </div>  
 
+        <div class="extras">
         <h1 class="inicio">Extras e Acompanhamentos</h1> 
         <p>Gengibre em conserva – R$ 3,00</p>
         <p>Wasabi fresco – R$ 4,00</p>
         <p>Molho shoyu – 3,00</p>
         <p>Tarê artesanal – R$ 5,00</p>
+        </div>
 
+        <div class="bebidas">
         <h1 class="inicio">🍶 Bebidas</h1>
         <P>Refrigerante lata – R$ 7,90</P>
         <p>Água com/sem gás – R$ 5,90</p>
         <p>Cerveja Long Neck – R$ 12,90</p>
         <p>Saquê Importado (dose) – R$ 19,90</p>
         <p>Drink Especial “Bona” – R$ 24,90</p>
+        </div>
+
+        <button class="botao" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">Voltar ao topo</button>
+
+    <footer>
+        <p>© 2025 BONA Sushi e Grill. Todos os direitos reservados.</p>
+    </footer>
 
     </body>
 </html>       
