--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
         </div>
 
         <div class="form">
-        <h2>Quem acessou o site?</h2>
+        <h2>Fique por dentro das nossas<br> 
+             promoções!</h2>
         <p>Coloque seu nome e e-mail,</p>
         <p>para receber nossas novidades!</p>
         <form action="salvar.php" method="post">
