--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RestauranteSushi</title>
-    <link rel="stylesheet" href="css/css.css">
+    <link rel="stylesheet" href="css/stylo.css">
 </head>
 <body>
      <header>
