--- a/menu.html
+++ b/menu.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RestauranteSushi</title>
     <link rel="stylesheet" href="css/stylo.css">
+    <link rel="stylesheet" href="css/responsivo.css">
 </head>
 <body>
      <header>
