--- a/sobre.html
+++ b/sobre.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Sobre nós</title>
         <link rel="stylesheet" href="css/stylo.css">
+        <link rel="stylesheet" href="css/responsivo.css">
     </head>
     <body>
          <header>
