--- a/index.html
+++ b/index.html
@@ -1,76 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BONA-Sushiegrill</title>
+    <title>BONA Sushi & Grill</title>
+
     <link rel="stylesheet" href="css/stylo.css">
-    <link rel="stylesheet" href="css/responsivo.css">
+    <link rel="stylesheet" href="css/responsivo-completo.css">
 </head>
 
 <body>
-    <header>
-        <img class="logo" src="img/logo.png" alt="Logo do Restaurante BONA Sushi e Grill">
-        <nav>
-            <ul>
-                || <a href="index.html">Home</a> ||
-                <a href="sobre.html">Sobre Nós</a> ||
-                <a href="menu.html">Menu</a> ||
-            </ul>
-        </nav>
-    </header>
 
-        <img class="salao" src="img/salão.png" alt="Foto do Salão do Restaurante">
+<header>
+    <img class="logo" src="img/logo.png" alt="Logo do Restaurante BONA Sushi e Grill">
+    <nav>
+        <ul>
+            <a href="index.html">Home</a>
+            <a href="sobre.html">Sobre Nós</a>
+            <a href="menu.html">Menu</a>
+        </ul>
+    </nav>
+</header>
 
-        <div class="rodizio">
-            <h1 id="titulo">Valores do Rodizio</h1>
-            <h2>R$ 89,90 por pessoa</h2>
-            <h3>Crianças até 5 anos: Grátis</h3>
-            <h3>Crianças de 6 a 10 anos: R$ 44,90</h3>
-            <h3>Acima de 10 anos: Valor integral</h3>
-        </div>
+<img class="salao" src="img/salão.png" alt="Foto do Salão do Restaurante">
 
-        <div id="meio">
-            <img class="meio" src="img/logo.png" alt="Logo do Restaurante BONA Sushi e Grill">
-        </div>
+<section class="container home-grid">
 
-        <section class="horario">
-            <h1 id="titulo">Horário de Funcionamento</h1>
-            <h2>Seg - sex: 19hrs às 22:30hrs </h2>
-            <h2>Sábados: 19hrs às 22:30hrs</h2>
-            <h2>Domingos: Fechado</h2>
-        </section>
+    <div class="box rodizio">
+        <h1 id="titulo">Valores do Rodízio</h1>
+        <h2>R$ 89,90 por pessoa</h2>
+        <h3>Crianças até 5 anos: Grátis</h3>
+        <h3>Crianças de 6 a 10 anos: R$ 44,90</h3>
+        <h3>Acima de 10 anos: Valor integral</h3>
+    </div>
 
-        <div id="meio">
-            <img class="meio" src="img/logo.png" alt="Logo do Restaurante BONA Sushi e Grill">
-        </div>
+    <div class="box horario">
+        <h1 id="titulo">Horário de Funcionamento</h1>
+        <h2>Seg - Sex: 19h às 22:30h</h2>
+        <h2>Sábados: 19h às 22:30h</h2>
+        <h2>Domingos: Fechado</h2>
+    </div>
 
-        <div class="endereco">
-            <h1 id="titulo">Endereço:</h1>
-            <h3>Rua das Cerejeiras, 128 </h3>
-            <h3>Bairro Central</h3>
-            <h3>São Miguel do Oeste, SC</h3>
-            <h3>CEP: 12345-777</h3>
-        </div>
+    <div class="box endereco">
+        <h1 id="titulo">Endereço</h1>
+        <h3>Rua das Cerejeiras, 128</h3>
+        <h3>Bairro Central</h3>
+        <h3>São Miguel do Oeste - SC</h3>
+        <h3>CEP: 12345-777</h3>
+    </div>
 
-        <div class="contato">
-            <img class="wpp" src="img/telefone2.webp" alt="Logo do telefone">
-            <h1 id="titulo">Telefone</h1>
-            <h3>(49) 3456-7890</h3>
-            <img class="wpp" src="img/wpp.png" alt="Logo do WhatsApp">
-            <h1 id="titulo">WhatsApp</h1>
-            <h3>(49) 98765-4321</h3>
-            <img class="wpp" src="img/email.jpg" alt="Logo do Email">
-            <h1 id="titulo">Email</h1>
-            <h3>contato@bonasushi.com.br</h3>
-        </div>
+    <div class="box contato">
+        <h1 id="titulo">Contato</h1>
 
-        <div class="form">
-        <h2>Fique por dentro das nossas<br> 
-             promoções!</h2>
-        <p>Coloque seu nome e e-mail,</p>
-        <p>para receber nossas novidades!</p>
+        <img class="wpp" src="img/telefone2.webp"><h3>(49) 3456-7890</h3>
+        <img class="wpp" src="img/wpp.png"><h3>(49) 98765-4321</h3>
+        <img class="wpp" src="img/email.jpg"><h3>contato@bonasushi.com.br</h3>
+    </div>
+
+    <div class="box form">
+        <h2>Fique por dentro das promoções!</h2>
+        <p>Cadastre seu nome e e-mail.</p>
+
         <form action="salvar.php" method="post">
             <label for="nome">Nome:</label>
             <input type="text" id="nome" name="nome" required><br><br>
@@ -80,12 +71,16 @@
 
             <input type="submit" value="Enviar">
         </form>
-        </div>
-            <button class="botao" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">Voltar ao topo</button>
+    </div>
 
-            <footer>
-                <p>© 2025 BONA Sushi e Grill. Todos os direitos reservados.</p>
-            </footer>
-    </body>
+</section>
+
+<button class="botao" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">Voltar ao topo</button>
+
+<footer>
+    <p>© 2025 BONA Sushi e Grill. Todos os direitos reservados.</p>
+</footer>
+
+</body>
 
 </html>
