--- a/menu.html
+++ b/menu.html
@@ -1,95 +1,97 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RestauranteSushi</title>
+    <title>Menu - BONA Sushi & Grill</title>
+
     <link rel="stylesheet" href="css/stylo.css">
-    <link rel="stylesheet" href="css/responsivo.css">
+    <link rel="stylesheet" href="css/responsivo-completo.css">
 </head>
+
 <body>
-     <header>
-        <img class="logo" src="img/logo.png" alt="Logo do Restaurante BONA Sushi e Grill">
-        <nav>
-            <ul>
-             || <a href="index.html">Home</a> ||
-                <a href="sobre.html">Sobre Nós</a> ||
-                <a href="menu.html">Menu</a> ||
-            </ul>     
-        </nav>
-    </header>
-        <img class="salao" src="img/salão.png" alt="Foto do Salão do Restaurante">
-        <div class="combinados">
-        <h1 class="inicio">🥢 Combinados </h1>
-        
-        <p>Combinado Clássico (20 peças) – R$ 59,90
-            (Salmão, atum, peixe branco, hossomakis e uramakis) </p>
 
-        <p>Combinado Especial (40 peças) – R$ 109,90
-            (Variedade de sushis e sashimis com molhos exclusivos)</p>
+<header>
+    <img class="logo" src="img/logo.png" alt="Logo do Restaurante BONA Sushi e Grill">
+    <nav>
+        <ul>
+            <a href="index.html">Home</a>
+            <a href="sobre.html">Sobre Nós</a>
+            <a href="menu.html">Menu</a>
+        </ul>
+    </nav>
+</header>
 
-        <p>Combinado Premium (60 peças) – R$ 159,90
-            (Inclui sushis especiais, sashimis, niguiris e rolls especiais)</p>
-        <p>Combinado Vegetariano (20 peças) – R$ 49,90
-            (Sushis e rolls com legumes frescos e tofu)</p>    
-        <p>Combinado Família (80 peças) – R$ 199,90
-            (Ideal para compartilhar, com uma seleção variada para todos os gostos)</p>    
-        </div>
-        <div id="meio">
-            <img class="meio" src="img/logo.png" alt="Logo do Restaurante BONA Sushi e Grill">
-        </div>
-        <div class="entradas">
-        <h1 class="inicio">🍤 Entradas</h1>
-        <p>Shimeji na manteiga – R$ 34,90</p>
-        <p>Tempurá de camarão (6 unid.) – R$ 42,90</p>
-        <p>Guioza (6 unid.) – R$ 29,90</p>
-        <p>Sunomono (salada de pepino com kani) – R$ 19,90</p>
-        </div>
-        <div class="pratos">
-        <h1 class="inicio">🍣 Sushis e Sashimis</h1>
-        <p>Sushi de salmão (2 unid.) – R$ 12,90</p>
-        <p>Sushi de atum (2 unid.) – R$ 14,90</p>
-        <p>Niguiri de Salmão (2 unid.) – R$ 14,90</p>
-        <p>Niguiri de Atum (2 unid.) – R$ 15,90</p>
-        </div>
+<img class="salao" src="img/salão.png" alt="Foto do Salão do Restaurante">
 
-        <div class="rolls">
-        <h1 class="inicio">🍱 Rolls Especiais</h1>
-        <p>Filadelfia Roll (8 unid.) – R$ 39,90</p>
-        <p>Dragon Roll (8 unid.) – R$ 44,90</p>
-        <p>Hot Roll (8 unid.) – R$ 36,90</p>
-        <p>California Roll (8 unid.) – R$ 32,90</p>
-        </div>
+<section class="container menu-grid">
 
-        <div class="pratosquentes">     
-        <h1 class="inicio">🍜 Pratos Quentes</h1>   
-        <p>Yakissoba de Frango – R$ 29,90</p>
-        <p>Yakissoba de Camarão – R$ 34,90</p>
-        <p>Lámen tradicional – R$ 49,90</p>
-        </div>  
+    <div class="box combinados">
+        <h1>🥢 Combinados</h1>
+        <p>Combinado Clássico – R$ 59,90</p>
+        <p>Combinado Especial – R$ 109,90</p>
+        <p>Combinado Premium – R$ 159,90</p>
+        <p>Combinado Vegetariano – R$ 49,90</p>
+        <p>Combinado Família – R$ 199,90</p>
+    </div>
 
-        <div class="extras">
-        <h1 class="inicio">Extras e Acompanhamentos</h1> 
-        <p>Gengibre em conserva – R$ 3,00</p>
-        <p>Wasabi fresco – R$ 4,00</p>
-        <p>Molho shoyu – 3,00</p>
-        <p>Tarê artesanal – R$ 5,00</p>
-        </div>
+    <div class="box entradas">
+        <h1>🍤 Entradas</h1>
+        <p>Shimeji – R$ 34,90</p>
+        <p>Tempurá – R$ 42,90</p>
+        <p>Guioza – R$ 29,90</p>
+        <p>Sunomono – R$ 19,90</p>
+    </div>
 
-        <div class="bebidas">
-        <h1 class="inicio">🍶 Bebidas</h1>
-        <P>Refrigerante lata – R$ 7,90</P>
-        <p>Água com/sem gás – R$ 5,90</p>
-        <p>Cerveja Long Neck – R$ 12,90</p>
-        <p>Saquê Importado (dose) – R$ 19,90</p>
-        <p>Drink Especial “Bona” – R$ 24,90</p>
-        </div>
+    <div class="box pratos">
+        <h1>🍣 Sushis e Sashimis</h1>
+        <p>Sushi de salmão – R$ 12,90</p>
+        <p>Sushi de atum – R$ 14,90</p>
+        <p>Niguiri salmão – R$ 14,90</p>
+        <p>Niguiri atum – R$ 15,90</p>
+    </div>
 
-        <button class="botao" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">Voltar ao topo</button>
+    <div class="box rolls">
+        <h1>🍱 Rolls Especiais</h1>
+        <p>Filadélfia – R$ 39,90</p>
+        <p>Dragon – R$ 44,90</p>
+        <p>Hot – R$ 36,90</p>
+        <p>California – R$ 32,90</p>
+    </div>
 
-    <footer>
-        <p>© 2025 BONA Sushi e Grill. Todos os direitos reservados.</p>
-    </footer>
+    <div class="box pratosquentes">
+        <h1>🍜 Pratos Quentes</h1>
+        <p>Yakissoba frango – R$ 29,90</p>
+        <p>Yakissoba camarão – R$ 34,90</p>
+        <p>Lámen – R$ 49,90</p>
+    </div>
 
-    </body>
-</html>       
+    <div class="box extras">
+        <h1>Extras</h1>
+        <p>Gengibre – R$ 3,00</p>
+        <p>Wasabi – R$ 4,00</p>
+        <p>Shoyu – R$ 3,00</p>
+        <p>Tarê – R$ 5,00</p>
+    </div>
+
+    <div class="box bebidas">
+        <h1>🍶 Bebidas</h1>
+        <p>Refrigerante – R$ 7,90</p>
+        <p>Água – R$ 5,90</p>
+        <p>Long Neck – R$ 12,90</p>
+        <p>Saquê – R$ 19,90</p>
+        <p>Drink – R$ 24,90</p>
+    </div>
+
+</section>
+
+<button class="botao" onclick="window.scrollTo({top: 0, behavior:'smooth'})">Voltar ao topo</button>
+
+<footer>
+    <p>© 2025 BONA Sushi e Grill. Todos os direitos reservados.</p>
+</footer>
+
+</body>
+
+</html>
